update task api
